[metadata]
name = 'pipedreamhq'
version = '0.0.1'
description = 'pipedream.com python library'
author = 'Giao Phan'
author_email = 'giao@pipedream.com'
license = 'MIT'
url = 'https://github.com/_/pipedreamhq'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
